--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,10 +11,11 @@ html,body{
   overflow : hidden;
 }
 
-@media only screen and (max-device-width: 300px)
-{
-  .buttons {height:160%;}
-
+@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+  .buttons{
+    height:100%;
+    width: 100%;
+  }
 }
 
 button{
