--- a/stylesheet.css
+++ b/stylesheet.css
@@ -12,10 +12,7 @@ html,body{
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
-  .buttons{
-    height:240%;
-	  
-  }
+  .buttons{height:250%;}
 
 }
 
